# ReadmeMagic-github-readme-design-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PREVIEW.html  PYPI_UPLOAD_GUIDE.ps1  README.md  README_ZH.md  RELEASE_GUIDE.md  SKILL.md  pyproject.toml  setup.py
agents/: openai.yaml
examples/: ai-project.md  cli-tool.md  python-library.md
readme_magic/: __init__.py  analyzer.py  cli.py  optimizer.py  quality.py
readme_magic/templates/: standard.md
readme_magic/templates/bilingual/: cli-tool.md  standard.md
readme_magic/templates/en/: library.md  personal.md
readme_magic/templates/zh/: ai-project.md  standard.md
references/: readme-rubric.md
templates/: ai-project.md  cli-tool.md
templates/bilingual/: ai-project.md  library.md  personal.md
templates/zh/: cli-tool.md  library.md  personal.md
tests/: test_analyzer.py  test_cli.py  test_optimizer.py  test_quality.py
