[build-system]
requires = ["flit_core>=3.12"]
build-backend = "flit_core.buildapi"

[project]
name = "ReadmeMagic"
dynamic = ["version"]
description = "Create professional, beautiful, high-converting README.md files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "GetIT-Sunday", email = "your-email@example.com"}]
keywords = ["readme", "github", "readme-generator", "badges", "star-history", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
]

[project.urls]
Homepage = "https://github.com/GetIT-Sunday/ReadmeMagic"

[project.scripts]
readme-magic = "readme_magic.cli:main"

[tool.flit.module]
name = "readme_magic"