[build-system]
requires = ["flit_core>=3.12"]
build-backend = "flit_core.buildapi"

[project]
name = "readme-magic"
version = "2.0.0"
description = "Analyze and safely optimize GitHub README.md files from repository evidence"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "GetIT-Sunday"}]
keywords = ["readme", "github", "readme-generator", "badges", "star-history", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
]

[project.urls]
Homepage = "https://github.com/GetIT-Sunday/ReadmeMagic-github-readme-design-skill"
Repository = "https://github.com/GetIT-Sunday/ReadmeMagic-github-readme-design-skill"
Issues = "https://github.com/GetIT-Sunday/ReadmeMagic-github-readme-design-skill/issues"

[project.scripts]
readme-magic = "readme_magic.cli:main"

[tool.flit.module]
name = "readme_magic"

[tool.flit.sdist]
include = ["readme_magic/templates/", "references/", "agents/", "SKILL.md"]
